[package]
name = "bevy_anvil"
version = "0.1.0"
edition = "2024"

[dependencies]
anvil_dylib = { path = "anvil_dylib", optional = true }
anvil = { git = "https://github.com/paramatrix-dev/anvil/", rev = "126b414f4360d7a1adac3b889d1438a350aecf50" }
bevy = "0.16.1"

[dev-dependencies]
bevy_simple_subsecond_system = { git = "https://github.com/TheBevyFlock/bevy_simple_subsecond_system", rev = "e912f4494a8643385c54498020e5ee243be133d6" }

[features]
dynamic = ["anvil_dylib"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
